# eel

./: .dockerignore  .gitignore  2test_rear_tank_and_distance.py  AGENTS.md  Dockerfile  Dockerfile.dev  Dockerfile.humble  Dockerfile.rpi  Dockerfile.rpi2  Dockerfile.ubuntu  HOWTO.md  Makefile  README.md  bajs.py  bajs.txt  build-image2.sh  chatgbg.cpp  cyclonedds.xml  dds.xml  depth_test2.py  depth_test3.py  docker-compose.yml  eel.xml  example_of_how_to_run_depth_control_rudder_node.py  measurements.txt  pip_freeze_on_eel_rpi.txt  publish_once_example.py  requirements.txt  requirementsCLEANED.txt  requirementsSOMETHING.txt  source_me.sh  start.py  start_front_tank.py  start_hw_pwm.py  stop.py  test.py  test_ad.py  test_adconverter_mcp3008.py  test_ballast_control.py  test_depth.py  (+15 more)
src/eel/: package.xml  setup.cfg  setup.py
src/eel/eel/battery/: battery_node.py  battery_sensor.py  battery_sim.py  battery_utils.py
src/eel/eel/data_logger/: common.py  data_logger_node.py  data_recorder.py
src/eel/eel/depth_control/: base.py  depth_control_node.py  depth_control_node2.py  depth_control_node3.py  depth_control_node_rudder.py  depth_state_handler.py  eel_depth_controllers.py  pid_controller.py  pid_merger.py  target_checker.py
src/eel/eel/dive/: dive_action_client.py  dive_action_server.py
src/eel/eel/fake_eel/: fake_eel_node.py  fake_route.py
src/eel/eel/gnss/: gnss_node.py  gnss_sensor.py  gnss_sim.py
src/eel/eel/imu/: imu_node.py  imu_sensor.py  types.py  (+1 more)
src/eel/resource/: forward_serial.py
src/eel/test/: test_copyright.py  test_flake8.py  test_pep257.py
(+258 files in other folders)
